simplify further, move toward key answering

--- a/config/short_notrig.yaml
+++ b/config/short_notrig.yaml
@@ -19,24 +19,20 @@ Blank_screen_for_response_show_time: [2.000, 2.400, 0.100]
 
 # * experiment structure
 Experiment_blocks: [
-    {type: msg, file_name: greet.txt},
-    {type: training, number_of_trials: 6},
-    {type: msg, file_name: training.txt},
-    {type: training, number_of_trials: 6},
-    {type: msg, file_name: end_training.txt},
-    {type: msg, file_name: first_block.txt, duration: 5},
+    # {type: msg, file_name: greet.txt},
+    # {type: training, number_of_trials: 6},
+    # {type: msg, file_name: training.txt},
+    # {type: training, number_of_trials: 6},
+    # {type: msg, file_name: end_training.txt},
+    # {type: msg, file_name: first_block.txt, duration: 5},
 
-    {type: experiment, number_of_trials: 6},
+    {type: experiment},
     {type: break, num: 1},
-    {type: experiment, number_of_trials: 6},
+    {type: experiment},
     {type: break, num: 2},
-    {type: experiment, number_of_trials: 6},
+    {type: experiment},
     {type: break, num: 3},
-    {type: experiment, number_of_trials: 6},
+    {type: experiment},
     {type: break, num: 4},
-    {type: experiment, number_of_trials: 6},
-    {type: break, num: 5},
-    {type: experiment, number_of_trials: 6},
-    {type: break, num: 6},
-    {type: experiment, number_of_trials: 6},
+    {type: experiment},
     {type: msg, file_name: end.txt, duration: 5}]
