--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ questionnaires/processed responses_old.xlsx
 questionnaires/to_delete.txt
 questionnaires/Cechy afektywne a kontrola poznawcza_ Podejście neurofizjologiczne (Responses) old.xlsx
 questionnaires/processed responses old.xlsx
+Stroop.pcl
+Stroop.sce
