--- a/config/full.yaml
+++ b/config/full.yaml
@@ -13,77 +13,38 @@ Target_size: 0.0272
 # needs to be calibrated when Target_size or Fixation_size is changed
 Fixation_offset: 0.001
 
-# * times
-Target_show_time: [0.200, 0.200, 0.100]
-Blank_screen_for_response_show_time: [2.000, 2.400, 0.100]
-
-# * experiment parameters
 Response_key: {
-    "red": "l",
-    "green": "r",
+    "red": "z",
+    "green": "x",
+    "blue": "n",
+    "yellow": "m",
 }
-Response_instruction: |
-    Jeśli KOLOR CZCIONKI jest CZERWONY:
-    naciśnij LEWY przycisk myszy
-
-    Jeśli KOLOR CZCIONKI jest ZIELONY:
-    naciśnij PRAWY przycisk myszy
 
 # * experiment structure
 Experiment_blocks: [
-    {type: break, file_name: greet.txt},
-    {type: instructions},
-    {type: training, number_of_trials: 24},
-    {type: break, file_name: training.txt},
-    {type: training, number_of_trials: 24},
-    {type: break, file_name: end_training.txt},
-    {type: break, file_name: first_block.txt, duration: 5},
+    {type: msg, file_name: _1greet.txt},
+    {type: msg, file_name: _2greet.txt},
 
-    {type: experiment, number_of_trials: 48},
+    {type: msg, file_name: 1training.txt},
+    {type: 1training},
+
+    {type: msg, file_name: 2training.txt},
+    {type: 2training},
+
+    {type: msg, file_name: 3training.txt},
+    {type: 3training},
+
+    {type: msg, file_name: 4training.txt},
+    {type: 4training},
+
+    {type: msg, file_name: pre_experiment.txt},
+    {type: experiment},
     {type: break, num: 1},
-    {type: experiment, number_of_trials: 48},
+    {type: experiment},
     {type: break, num: 2},
-    {type: experiment, number_of_trials: 48},
+    {type: experiment},
     {type: break, num: 3},
-    {type: experiment, number_of_trials: 48},
+    {type: experiment},
     {type: break, num: 4},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 5},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 6},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 7},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 8},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 9},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 10},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 11},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 12},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 13},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 14},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 15},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 16},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 17},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 18},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 19},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 20},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 21},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 22},
-    {type: experiment, number_of_trials: 48},
-    {type: break, num: 23},
-    {type: experiment, number_of_trials: 48},
-    {type: break, file_name: end.txt, duration: 5}]
+    {type: experiment},
+    {type: msg, file_name: end.txt, duration: 5}]
