add Markers mapping script

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ questionnaires/Cechy afektywne a kontrola poznawcza_ Podejście neurofizjologicz
 questionnaires/processed responses old.xlsx
 Stroop.pcl
 Stroop.sce
+Triggers
+sonia_TriggMap backup.Markers
