--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,7 @@ questionnaires/processed responses old.xlsx
 Stroop.pcl
 Stroop.sce
 Triggers
+Sonia Triggers
 sonia_TriggMap backup.Markers
+BEH
+Export Markers_Part1
